changed name of main function

--- a/Connect4.ipynb
+++ b/Connect4.ipynb
@@ -45079,7 +45079,7 @@
     "        obs, _, _, _, _ = env.last()\n",
     "        \n",
     "        while not done: \n",
-    "            for i, agent in enumerate([agent0, agent1]): #The agents play one after another\n",
+    "            for i, agent in enumerate([agent0, agent1]): # The agents play one after another\n",
     "                \n",
     "                #action =  #Getting of the most interesting move (To complete)\n",
     "\n",
@@ -45151,7 +45151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Training_process():\n",
+    "def main():\n",
     "    \n",
     "    #Defining of the environment \n",
     "    env = connect_four_v3.env(render_mode=\"rgb_array\")\n",
